package es.upm.etsisi.poo;

public enum State {
    EMPTY,ACTIVE,CLOSED;
}
