@startuml
Skinparam groupInheritance 2
skinparam backgroundColor #CFEFFA
namespace Commands #FFFEDB {
}
namespace Products #FFFEDB {
}
namespace Users #FFFEDB {
}
nameSpace Info  #FFAA99{

}
note top of Info
<size:9>Aquí se guardan archivos que poco tienen que ver con el programa en si</size>
<size:9>No creo que se deba representar en el diagrama pero es más visual</size>
end note

Class Utilities{
    +{static}MAX_LIST: int = 200
    +{static}MAX_IN_TICKET: int = 100

    +{static}numGenerator(int cantidad): int
    +{static}idAleatorio(ProductHandler): int
}

Class Comments{
    +{static}LENGTH_WRONG: String
    +{static}TICKET_NEW_OK: String
    +{static}PRODUCT_NOT_FOUND: String
    ...
}

Info -[hidden]left- Comments
Info -[hidden]left- Utilities

Class App {
    -ticketHandler: TicketHandler
    -userHandler: UserHandler
    -productHandler: ProductHandler

    +{static}main(String[] args): void
}
class CLI {
    -commandsProducts: CommandProd
    -commandsTicket: CommandTicket
    -commandsUser: CommandUser

    +CLI(CommandProd commandsProductos, CommandTicket commandsTicket, CommandUser commandsUser)
    +start(): void
    +start(String fichero): void
    +dispatcherCentralCommand(String actCommand): void
    +sliceCommand(String args): String[]
    +{static}mostrarComandos(): void
}

class Products.Product<<Abstract>>  {
    #id: int
    #name:str
    #price: double

    +Product(int id, String name, double price)
    +getPrecio(): double
    +setPrice(double precio): void
    +getName(): String
    +setName(String name): void
    +getId(): int
    +equals(Product): boolean
    +{abstract}isPersonalizable(): boolean
    +{abstract}toString(): String
    +{abstract}getCategory(): Category
    +{abstract}totalPrice(): double
    +{abstract}getDiscount(): double
    +{abstract}amountTicket(int amount): int
    +{abstract}getMinTime(): Duration
    +getStartDate(): LocalDateTime
}

class ProductHandler {
    -{static}CAPACITY = MAX_LIST

    +ProductHandler()
    +addProduct(Product): boolean
    +removeProduct(int id): void
    +getProduct(int id): Product
    +getProductList(): List<Producto>
    +getHandlerSize(): int
    +updateProduct(id,field,newFact): void
    +updateProductName(id ,newName):void
    +updateProductCategory(id,newCat):void
    +updateProductPrice(id, newPrice): void
    +listProducts():void
    +capacityLeft(): int
    +getCapacity(): int
}


class TicketItem{
    -amount: int

    +TicketItem(Product product, int amount)
    +getProduct(): Product
    +getAmount(): int
    +addAmount(int n): void
    +subtotal(): double
}

TicketItem --> Product

class Ticket{
    -id: int
    -stateTicket: State
    -{static}MAXSIZE = 100
    -ticketDate: String

    +Ticket()
    +Ticket(int id)
    +getTicketDate(): String
    +getId(): int
    +getProducts(): ArrayList<TicketItem>
    +getNumeroProductos(): int
    +ticketIsFull(): boolean
    +getTicketState(): State
    +updateState(State stateTicket): void
    +addProduct(Product product, int cantidad): void
    +removeProduct(int id): boolean
    +busquedaProductoPorID(ArrayList<TicketItem>, int id): TicketItem
    +getCantidadProductoCategoria(): Map<Category,Integer>
    +printTicket(): void
    +checkIfTicketCanClose(): boolean
    +listTicket(): String
}
Ticket o-- TicketItem

enum State{
EMPTY
ACTIVE
CLOSED
}

class TicketHandler {

    +TicketHandler()
    +getTickets(): ArrayList<Ticket>
    +newTicket(int idT): int
    +newTicket(): int
    +auxFindIdForTicket(int TId): int
    +addTicket(int TId, Product newproduct ,int cantidad): void
    +getTicket(int TId): Ticket
    +removeTicket(int TId): boolean
    +printTicketsClose(int TId): void
    +printTicketsShow(int TId): void
}

TicketHandler o-- Ticket



class Products.ProductBasic{
    -category: Category

    +Product(Category category, int id, String name, double price)
    +isPersonalizable(): boolean
    +toString(): String
    +toString(int num, double amount): String
    +getCategory(): Category
    +setCategory(Category): void
    +totalPrice(): double
    +getDiscount(): double
    +amountTicket(int amount): int
    +getMinTime(): Duration

}

enum Products.Category {
MERCH
ELECTRONICA
PAPELERIA
ROPA
LIBRO
}
Product <|-- ProductBasic

class Products.ProductPers{

    -texts:ArrayList<Str>
    -MAX_TEXTOS: int
    -{static}MAX_PERS = 10

    +ProductPers(Category category,int id, String name, double price, int maxText)
    +addText(String text): boolean
    +getMaxText(): int
    +toString(): String
    +toString(int num, duble amount): String
    +totalPrice(): double
    +isFull(): boolean
    +isPersonalizable(): boolean
}
ProductBasic <|--  ProductPers

class Products.CampusMeals{
    -maxParticipantes: int
    -MAXPEOPLEALLOWED:100
    -{static}MIN_TIME = 72
    -dateOfEnd: LocalDateTime

    +CampusMeals(int id, String name, double price, LocalDateTime dateOfEnd, int maxParticipantes)
    +getDateOfEnd(): LocalDateTime
    +getMaxParticipantes(): int
    +getMinTime(): Duration
    +toString(): String
    +toString(int num, int amount): String
    +TotalPrice(): double
    +getDiscount(): double
    +amountTicket(int amount): int
    +getCategory(): Category
    +isPersonalizable(): boolean
    +getStartDate(): LocalDateTime
}

class Products.Meetings{
    -maxParticipantes: int
    -MAXPEOPLEALLOWED:100
    -{static}MIN_TIME = 12
    -dateOfEnd: LocalDateTime

    +Meetings(int id, String name, double price, LocalDateTime dateOfEnd, int maxParticipantes)
    +getDateOfEnd(): LocalDateTime
    +getMaxParticipantes(): int
    +getMinTime(): Duration
    +toString(): String
    +toString(int num, int amount): String
    +TotalPrice(): double
    +getDiscount(): double
    +amountTicket(int amount): int
    +getCategory(): Category
    +isPersonalizable(): boolean
    +getStartDate(): LocalDateTime
}

Product <|-- CampusMeals
Product <|-- Meetings

class UserHandler{

    +UserHandler()
    +getUserAmount(): int
    +getClientsRecord(): HashMap<String, Client>
    +getCashiersRecord(): HashMap<String, Cashier>
    +registerUser(User): void
    +getUserById(String id): User
    +listCashierRecord(): void
    +listClientRecord(): void
    +listTicketsCashier(String idCash): void
}

abstract class Users.User<<abstract>> {
    -String dni
    -String nombre
    -String correo

    +User(String dni, String nombre, String correo)
    +getName(): String
    +getMail(): String
    +getId(): String
    +getThisCash(): Cashier
    +getThisCli(): Client
    +isCash(): boolean
    +addTicket(Ticket): void
    +removeTicket(): void
}
UserHandler o-- User

class Users.Client {

    +Client(String dni, String nombre, String correo, Cashier cash)
    +getCashier(): Cashier
    +setTicketToClient(Ticket): void
    +getThisCli(): Client
    +removeTicketFromClient(int idTicket): void
    +getTicket(int idT): Ticket
    +getTickets(): HashMap<Integer, Ticket>
}

Client --|> User

class Users.Cashier{

    +Cashier(String id, String nombre, String correo)
    +getTickets(): HashMap<Integer,Ticket>
    +addTicket(int id): void
    +removeTicket(int id): void
    +printTicket(int id): void
    +printAllTickets(): void
    +validarId(int id): String
    +listAllTickets(): void
    +getThisCash(): Cashier
    +isCash(): boolean
    +extractNumericId(String CashierId): int
}
User <|-- Cashier

Client --> Cashier

Cashier o-- Ticket
Client o-- Ticket


abstract class Commands.Command <<abstract>>{
    #name: String

    +Command(String name)
    +{abstract}isThisCommand(String[] args)
    +{abstract}execute(String[] args)
}


class Commands.CommandProd{

    +checkCommand(String[] comdiv, String actCom)
    +addCommand(Command)
}
CommandProd o-- Command

class Commands.CommandsForProd.CommandProdEx{
    +CommandProdEx(String name, ProductHandler productHandler)
    +isThisCommand(String name): boolean
    +execute(String[] args)
}

CommandProd *-- CommandsForProd
App ..> CommandProd



class Commands.CommandTicket{

    + checkCommand(String[] comdiv, String actCom)
    + addCommand(Command)
}

CommandTicket o-- Command

class Commands.CommandsForTicket.CommandTicketEx{
     +CommandTicketEx(String name, TicketHandler ticketHandler, UserHandler userHandler, ProductHandler productHandler*)
     +isThisCommand(String name): boolean
     +execute(String[] args)
}


CommandTicket *-- CommandsForTicket
App .[norank].> CommandTicket

class Commands.CommandUser{

    + checkCommand(String[] comdiv, String actCommand)
    + addCommand(Command)
}

CommandUser o-- Command

class Commands.CommandsForUser.CommandUserEx{
    +CommandUserEx(String name, UserHandler userHandler)
    +isThisCommand(String name)
    +execute(String[] args)
}

CommandUser *-- CommandUserEx
App .[norank].> CommandUser

App ..> CLI

Command <|-- CommandsForProd
Command <|-- CommandsForTicket
Command <|-- CommandsForUser


ProductHandler o-- Product

App --> ProductHandler
App --> TicketHandler
App --> UserHandler

CommandsForUser --> UserHandler
CommandsForProd --> ProductHandler
CommandsForTicket --> TicketHandler
CommandsForTicket --> ProductHandler
CommandsForTicket --> UserHandler

CLI -[hidden]right- ProductHandler
@enduml